CORE-0: add admin

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/router": "^19.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "@splidejs/splide": "^4.1.4",
+    "bootstrap": "^5.3.7",
     "mysql2": "^3.14.2",
     "rxjs": "~7.8.0",
     "swiper": "^11.0.0",
